# circlebe/src/utils/schemas/update.user.schema.ts
@@ -3,8 +3,9 @@ import { UpdateUserDTO } from "../../dto/user.dto";
 
 
 export const updateUserSchema = Joi.object<UpdateUserDTO>({
-    fullname : Joi.string().min(3).max(100).required(),
-    username : Joi.string().min(3).max(100).required(),
-    bio : Joi.string().min(3).max(100),
-    profile: Joi.string()
+    fullname : Joi.string(),
+    username : Joi.string(),
+    bio : Joi.string(),
+    profile: Joi.string(),
+    bgImage: Joi.string()
 })
