# circlebe/swagger/swagger-output.json
@@ -24,10 +24,18 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "post": {
         "description": "",
@@ -40,7 +48,7 @@
           }
         }
       },
-      "patch": {
+      "put": {
         "description": "",
         "responses": {
           "200": {
@@ -61,7 +69,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/UpdateUserDTO"
               }
@@ -70,48 +78,25 @@
         }
       }
     },
-    "/api/v1/users/{id}": {
+    "/api/v1/users/id": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/v1/users/email/{email}": {
@@ -133,6 +118,16 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/logout": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -364,6 +359,19 @@
         ]
       }
     },
+    "/api/v2/suggestion2": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v2/suggestion": {
       "get": {
         "description": "",
@@ -465,20 +473,18 @@
           "username": {
             "type": "string"
           },
-          "password": {
-            "type": "string",
-            "format": "password"
-          },
           "bio": {
             "type": "string"
+          },
+          "profile": {
+            "type": "string",
+            "format": "binary"
+          },
+          "bgImage": {
+            "type": "string",
+            "format": "binary"
           }
-        },
-        "required": [
-          "fullname",
-          "username",
-          "password",
-          "bio"
-        ]
+        }
       }
     }
   }
