# circlefe/src/features/auth/schemas/profile.ts
@@ -4,10 +4,12 @@ export const profileScema = z.object({
     fullname: z.string(),
     username: z.string(),
     bio: z.string(),
-    profile: z.instanceof(FileList)
-    .refine((file) => file.length == 1, "File is required!"),
-    bgImage: z.instanceof(FileList)
-    .refine((file) => file.length == 1, "File is required!"),
+    // profile: z.string(),
+    // bgImage: z.string(),
+    // profile: z.instanceof(FileList)
+    // .refine((file) => file.length == 1, "File is required!"),
+    // bgImage: z.instanceof(FileList)
+    // .refine((file) => file.length == 1, "File is required!"),
 });
 
 export type CreateProfileFormInputs = z.infer<typeof profileScema>
